added badge component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,6 @@
 @import "base/reset";
 @import "base/typography";
 
+@import "components/badge";
 @import "components/button";
 @import "components/icons";
