Added CheckBox Component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,4 +6,5 @@
 @import "components/badge";
 @import "components/button";
 @import "components/context-menu";
+@import "components/check-box";
 @import "components/icons";
