Added Drag and Drop Files Zone

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -48,8 +48,8 @@ h6 {
 
 .p-2 {
   font-weight: 400;
-  font-size: 1.25rem;
-
+  font-size: 1rem;
+  line-height: 1.5rem;
   &-bold {
     font-weight: 700;
   }
