--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,4 +7,5 @@
 @import "components/button";
 @import "components/context-menu";
 @import "components/check-box";
+@import "components/drop-zone";
 @import "components/icons";
