Added Buttons Filter both Default and Active, plus an example.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,4 +8,5 @@
 @import "components/context-menu";
 @import "components/check-box";
 @import "components/drop-zone";
+@import "components/filter";
 @import "components/icons";
