Added Notification Component with all of its three states

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,5 +8,11 @@
 @import "components/context-menu";
 @import "components/check-box";
 @import "components/drop-zone";
+@import "components/error-icon";
 @import "components/filter";
 @import "components/icons";
+@import "components/notification";
+@import "components/info-icon";
+@import "components/success-icon";
+
+@import "utils/utils";
