--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,8 @@
 @import "components/error-icon";
 @import "components/filter";
 @import "components/icons";
+@import "components/input";
+@import "components/island";
 @import "components/notification";
 @import "components/info-icon";
 @import "components/success-icon";
