--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -112,6 +112,7 @@
   &--secondary-white {
     background-color: $primary;
     color: $white;
+    border: 2px solid $white;
 
     &:hover {
       background-color: rgba(255, 255, 255, 0.12);
@@ -191,6 +192,17 @@
 
     &:disabled {
       opacity: 0.56;
+    }
+  }
+
+  &-with-icon {
+    display: inline-flex;
+    span {
+      color: $white;
+    }
+
+    svg {
+      fill: $white;
     }
   }
 }
