Removed unnecesary folders and files

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import "components/island";
 @import "components/notification";
 @import "components/info-icon";
+@import "components/popup";
 @import "components/success-icon";
 
 @import "utils/utils";
